2005-06-27  Luc Teirlinck  <teirllm@auburn.edu>

	* subr.el (add-to-list, add-to-ordered-list): Doc fixes.

2005-06-27  Lute Kamstra  <lute@gnu.org>

	* facemenu.el (facemenu-unlisted-faces): Add foreground and
	background color faces.
	(facemenu-get-face): Delete function.
	(facemenu-set-face-from-menu): Don't call facemenu-get-face.
	(facemenu-add-new-color): Make second argument mandatory.  Create
	the approprate face and return it.  Simplify.
	(facemenu-set-foreground, facemenu-set-background): Don't check if
	color is defined.  Use return value of facemenu-add-new-color.

2005-06-26  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-filter): Add missing argument to
	with-selected-window.

2005-06-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/easy-mmode.el (define-minor-mode): Don't automatically add
	a :require to the defcustom.

	* emacs-lisp/autoload.el (make-autoload): Add the :setter for
	defcustoms corresponding to minor modes.

2005-06-26  David Ponce  <david@dponce.com>

	* recentf.el: Require 'tree-widget instead of 'wid-edit.
	(recentf-filename-handler): Fix widget :type.
	(recentf-cancel-dialog, recentf-open-more-files)
	(recentf-open-files-action): Doc fix.
	(recentf-dialog-goto-first): New function.
	(recentf-dialog-mode-map): Set parent keymap first.
	(recentf-dialog-mode): Define with define-derived-mode.
	Don't display continuation lines in dialogs.
	(recentf-edit-list): Rename from recentf-edit-selected-items.
	(recentf-edit-list-select): Rename from recentf-edit-list-action.
	Simplify.
	(recentf-edit-list-validate): New function.
	(recentf-edit-list): Update accordingly.
	(recentf-open-files-item-shift): Remove.
	(recentf-open-files-item): Convert menu elements into tree and
	link widgets.  Don't create the widgets.
	(recentf-open-files): Update accordingly.
	(recentf-save-list): Untabify.

2005-06-25  Luc Teirlinck  <teirllm@auburn.edu>

	* replace.el (keep-lines-read-args): Add INTERACTIVE arg.