@@ -1,3 +1,11 @@
+2005-06-27  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
+
+	* ps-print.el: It was not working the page selection for printing.
+	Reported by Sebastian Tennant <sebyte@smolny.plus.com>.
+	(ps-print-version): New version 6.6.7.
+	(ps-end-sheet): New fun.
+	(ps-header-sheet, ps-end-job): Call it.
+
 2005-06-27  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* subr.el (add-to-list, add-to-ordered-list): Doc fixes.
